[gd_scene load_steps=2 format=2]

[ext_resource path="res://components/LevelHUD/LevelHUD.gd" type="Script" id=1]

[node name="Node2D" type="Control"]
anchor_right = 1.0
margin_bottom = 36.0
script = ExtResource( 1 )

[node name="MainPanel" type="Panel" parent="."]
anchor_right = 1.0
margin_bottom = 36.0

[node name="PrevButton" type="Button" parent="MainPanel"]
anchor_left = 0.1
anchor_right = 0.1
margin_top = 8.0
margin_right = 40.0
margin_bottom = 28.0
rect_min_size = Vector2( 40, 20 )
text = "Prev"

[node name="NextButton" type="Button" parent="MainPanel"]
anchor_left = 0.9
anchor_right = 0.9
margin_left = -40.0
margin_top = 8.0
margin_right = 2.0
margin_bottom = 28.0
rect_min_size = Vector2( 40, 20 )
text = "Next"

[node name="LevelNameLabel" type="Label" parent="MainPanel"]
margin_left = 115.0
margin_top = 11.0
margin_right = 189.0
margin_bottom = 25.0
text = "Level name"

[node name="LevelIndexLabel" type="Label" parent="MainPanel"]
margin_left = 87.0
margin_top = 11.0
margin_right = 108.0
margin_bottom = 25.0
text = "1"
align = 2

[connection signal="pressed" from="MainPanel/PrevButton" to="." method="_on_PrevButton_pressed"]
[connection signal="pressed" from="MainPanel/NextButton" to="." method="_on_NextButton_pressed"]
